# kgoldrunner

./: .flatpak-manifest.json  .gitattributes  .kde-ci.yml  AUTHORS  BUGS  CMakeLists.txt  Doxyfile  INSTALL  Mainpage.dox  Makefile.am  Messages.sh  README  TODO  VERSION  kgoldrunner.categories  kgoldrunner.kdevelop  kgoldrunner.lsm  snapcraft.yaml
cmake/: InternalMacros.cmake
cmake/modules/: FindSndFile.cmake
doc/: CMakeLists.txt  Makefile.am  index.docbook
gamedata/: CMakeLists.txt  KGr2toKGr3.sh  Makefile.am  README  game_CM.txt  game_GMEP.txt  game_GMGR.txt  game_GRII.txt  game_GotD.txt  game_MAZ.txt  game_blb.txt  game_cnt.txt  game_ende.txt  game_fd.txt  game_kgr.txt  game_lars.txt  game_plws.txt  game_plwv.txt  game_sot.txt  game_tute.txt  game_tutea.txt  game_wad.txt  levels.tar  rec_GMGR.txt  rec_GRII.txt  rec_demo.txt  sol_GotD.txt  sol_blb.txt  sol_fd.txt  sol_kgr.txt  sol_plws.txt  sol_tute.txt  sol_tutea.txt
pics/: CMakeLists.txt  README  apple_2.desktop  default.desktop  kgoldrunner.desktop  kgr_geek.desktop  midnight.desktop
po/ar/: kgoldrunner.po
po/ar/docs/kgoldrunner/: index.docbook
po/ast/: kgoldrunner.po
po/be/: kgoldrunner.po
po/bg/: kgoldrunner.po
po/bn/: kgoldrunner.po
po/br/: kgoldrunner.po
po/bs/: kgoldrunner.po
po/ca/: kgoldrunner.po
po/ca/docs/kgoldrunner/: index.docbook
po/ca@valencia/: kgoldrunner.po
po/cs/: kgoldrunner.po
po/cy/: kgoldrunner.po
po/da/: kgoldrunner.po
po/de/: kgoldrunner.po
po/de/docs/kgoldrunner/: index.docbook
po/el/: kgoldrunner.po
po/en_GB/: kgoldrunner.po
po/eo/: kgoldrunner.po
po/es/: kgoldrunner.po
po/es/docs/kgoldrunner/: index.docbook
po/et/: kgoldrunner.po
po/et/docs/kgoldrunner/: index.docbook
po/eu/: kgoldrunner.po
po/fa/: kgoldrunner.po
po/fi/: kgoldrunner.po
po/fr/: kgoldrunner.po
po/fr/docs/kgoldrunner/: index.docbook
po/ga/: kgoldrunner.po
po/gl/: kgoldrunner.po
po/gl/docs/kgoldrunner/: index.docbook
po/hi/: kgoldrunner.po
po/hne/: kgoldrunner.po
po/hr/: kgoldrunner.po
po/hu/: kgoldrunner.po
po/ia/: kgoldrunner.po
po/id/: kgoldrunner.po
po/is/: kgoldrunner.po
po/it/: kgoldrunner.po
po/it/docs/kgoldrunner/: index.docbook
po/ja/: kgoldrunner.po
po/ka/: kgoldrunner.po
po/kk/: kgoldrunner.po
po/km/: kgoldrunner.po
po/ko/: kgoldrunner.po
po/lt/: kgoldrunner.po
po/lv/: kgoldrunner.po
po/mai/: kgoldrunner.po
po/mk/: kgoldrunner.po
po/ml/: kgoldrunner.po
po/mr/: kgoldrunner.po
po/nb/: kgoldrunner.po
po/nds/: kgoldrunner.po
po/ne/: kgoldrunner.po
po/nl/: kgoldrunner.po
po/nl/docs/kgoldrunner/: index.docbook
po/nn/: kgoldrunner.po
po/oc/: kgoldrunner.po
po/pa/: kgoldrunner.po
po/pl/: kgoldrunner.po
po/pt/: kgoldrunner.po
po/pt/docs/kgoldrunner/: index.docbook
po/pt_BR/: kgoldrunner.po
po/pt_BR/docs/kgoldrunner/: index.docbook
po/ro/: kgoldrunner.po
po/ru/: kgoldrunner.po
po/sa/: kgoldrunner.po
po/se/: kgoldrunner.po
po/sk/: kgoldrunner.po
po/sl/: kgoldrunner.po
po/sl/docs/kgoldrunner/: index.docbook
po/sq/: kgoldrunner.po
po/sr/: kgoldrunner.po
po/sr@ijekavian/: kgoldrunner.po
po/sr@ijekavianlatin/: kgoldrunner.po
po/sr@latin/: kgoldrunner.po
po/sv/: kgoldrunner.po
po/sv/docs/kgoldrunner/: index.docbook
po/ta/: kgoldrunner.po
po/te/: kgoldrunner.po
po/tg/: kgoldrunner.po
po/tr/: kgoldrunner.po
po/ug/: kgoldrunner.po
po/uk/: kgoldrunner.po
po/uk/docs/kgoldrunner/: index.docbook
po/zh_CN/: kgoldrunner.po
po/zh_TW/: kgoldrunner.po
src/: CMakeLists.txt  KGoldrunner.desktop  Makefile.am  Messages.sh  data_messages.cpp  enemy1.xpm  enemy2.xpm  g.cpp  g.h  hero.xpm  kgoldrunner.cpp  kgoldrunner.h  kgoldrunner.qrc  kgoldrunner_debug.cpp  kgoldrunner_debug.h  kgoldrunnerui.rc  kgraphics.h  kgrcanvas.cpp  kgrcanvas.h  kgrconsts.h  kgrdebug.h  kgrdialog.cpp  kgrdialog.h  kgreditor.cpp  kgreditor.h  kgrfigure.cpp  kgrfigure.h  kgrgame.cpp  kgrgame.h  kgrgamecanvas.cpp  kgrgamecanvas.h  kgrgameio.cpp  kgrgameio.h  kgrglobals.h  kgrlevelgrid.cpp  kgrlevelgrid.h  kgrlevelplayer.cpp  kgrlevelplayer.h  kgrobject.cpp  kgrobject.h  (+33 more)
src/TagaroAudio/: AudioScene  audioscene.cpp  audioscene.h  openalruntime_p.h  sound.cpp  sound.h
themes/: CMakeLists.txt  README  apple_2.desktop  black-on-white.desktop  default.desktop  egypt.desktop  kgoldrunner.desktop  kgoldrunner.knsrc  kgr_geek.desktop  kgr_geek.svgz  midnight.desktop  nostalgia-blues.desktop  nostalgia.desktop
themes/egypt/: actors.svgz  egypt_kgr.svgz
themes/kgr_geek/: actors.svgz  set.svgz
