



########### install files ###############

install( FILES README
               default.desktop kgr_default.svg
               kgr_geek.desktop kgr_geek.svgz
               kgoldrunner.desktop
               apple_2.desktop
               midnight.desktop
               DESTINATION ${DATA_INSTALL_DIR}/kgoldrunner/pics )

